--- a/build
+++ b/build
@@ -1,3 +1,5 @@
 #!/bin/bash
 
-docker build -t kwkoo/go-toolset-7-centos7:1.13 .
+VERSION=1.13
+
+docker build -t kwkoo/go-toolset-7-centos7:${VERSION} .
